# leptos-wasi-test

./: Cargo.toml  spin.toml
src/: app.rs  lib.rs  server.rs
