[package]
name = "leptos-wasi-test"
authors = ["itowlson <ivan.towlson@fermyon.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
console_error_panic_hook = "0.1"
leptos = { git = "https://github.com/leptos-rs/leptos" }
leptos_meta = { git = "https://github.com/leptos-rs/leptos" }
leptos_router = { git = "https://github.com/leptos-rs/leptos" }
leptos_wasi = { git = "https://github.com/ogghead/leptos_wasi", branch = "pre-rc1-building", optional = true }
spin-sdk = { version = "3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasi = { version = "=0.13.1", optional = true }

[workspace]

[features]
csr = ["leptos/csr"]
hydrate = ["leptos/hydrate", "dep:wasm-bindgen"]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "leptos/spin",
  "dep:spin-sdk",
  "dep:leptos_wasi",
  "dep:wasi",
]

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name   
output-name = "leptos_wasi_test"
style-file = "style/main.scss"
bin-features = ["ssr"]
bin-default-features = true
lib-features = ["hydrate"]
lib-default-features = false
